--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = Lab4
+src_dir = driving
 
 [env:adafruit_feather_esp32s3_nopsram]
 platform = espressif32
